--- a/lp02.md
+++ b/lp02.md
@@ -1,3 +1,5 @@
 # Larry Plotter y La clave Secreta del Wifi
 
 Tras descubrir un bug en *Matrix*, los ordenadores de la escuela han sido atacados por un *troyanogi*.
+
+En el código de **Larry** puede esconderse *malware*.
