Agrego linea al resumen del libro 5

--- a/lp05.md
+++ b/lp05.md
@@ -1,3 +1,5 @@
 # Larry Plotter y La Orde de Unix
 
 El código de **Larry** cada vez e más peligroso porque **Ballmemort** cada vez tiene más **followers**
+
+Es un pecador de la pradera.
